app/media-server/prowlarr/prowlarr-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9696
  selector:
    app: prowlarr
  type: LoadBalancer
  # if type: LoadBalancer is enabled than comment out INGRESS section below
status:
  loadBalancer: {}
