app/media-server/prowlarr/prowlarr-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: prowlarr
  namespace: media-server
spec:
  ingressClassName: traefik
  rules:
  - host: prowlarr.home.adaminformatika.hu
    http:
      paths:
      - backend:
          service:
            name: prowlarr
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - prowlarr.home.adaminformatika.hu
    secretName: prowlarr.home.adaminformatika.hu
